# pyudemy

./: .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  conftest.py  pyproject.toml  runtests  setup.py
.github/workflows/: python-publish.yml  pythonpackage.yml
examples/: courses.py
pyudemy/: __init__.py  udemy.py
tests/: results.py  test_udemy.py  tests.py
