[tool.poetry]
name = "pyudemy"
version = "1.0.8"
description = "Simple integrate of API udemy.com with python"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hudsonbrendon/pyudemy"
homepage = "https://github.com/hudsonbrendon/pyudemy#readme"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests-mock = "^1.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["pytest", "requests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
