[tool.poetry]
name = "pyudemy"
version = "1.1.2"
description = "Simple integrate of API udemy.com with python"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hudsonbrendon/pyudemy"
homepage = "https://github.com/hudsonbrendon/pyudemy#readme"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
requests-mock = "^1.10.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["pytest", "requests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
